--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "start": "npm-run-all --parallel security-check dev",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
-    "share": "npm-run-all --parallel localtunnel dev"
+    "share": "npm-run-all --parallel localtunnel dev",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm run clean-dist",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/copyAssets.js"
   },
   "author": "Dan Koenig",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "gsap": "^2.0.2",
-    "style-loader": "^0.23.1"
+    "gsap": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -34,6 +37,10 @@
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-md5-hash": "0.0.6",
-    "whatwg-fetch": "1.0.0"
+    "rimraf": "^2.6.3",
+    "whatwg-fetch": "1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "ncp": "^2.0.0",
+    "style-loader": "^0.23.1"
   }
 }
