--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "author": "Dan Koenig",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
