--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Dan Koenig",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "gsap": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
